fixed font color in dark mode

--- a/static/style.css
+++ b/static/style.css
@@ -3,14 +3,23 @@ body {
   font-family: 'Comfortaa', sans-serif;
   margin: 0;
   padding: 0;
-  transition: background 0.5s ease, color 0.5s ease;
+  transition: background 0.5s ease, color 0.5s ease, font-family 0.5s ease;
   background: linear-gradient(to right, #FFDEE9, #B5FFFC);
   color: #222;
   min-height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 body[data-theme="dark"] {
-  color: #eee;
+  color: #cbd5e1;
+  background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
+  background-image: url('/static/moon.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 75%;
+  font-family: 'Lora', serif;
 }
 
 /* Startscreen */
